vuesax integrated for loading

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^7.14.3",
     "luxon": "^1.24.1",
     "vue": "^2.6.11",
+    "vuesax": "^3.11.17",
     "xstate": "^4.10.0"
   }
 }
